fix menu behavior on mobile

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -128,6 +128,7 @@
     .team-box {
         width: 600px;
         margin:1em;
+        padding-bottom:2em;
         justify-content: space-between;
         
         .team-left{
